# shuyixiao-agent

./: .env.example  .gitignore  AI_TOOLS_UPGRADE.md  CHANGELOG.md  COLLECTION_MAPPING_FIX.md  COLLECTION_SELECT_UPDATE.md  COMPLETE_FEATURES_GUIDE.md  CONTRIBUTING.md  DATABASE_PATH_UPDATED.md  DATABASE_PERSISTENCE_FIX.md  DATABASE_READONLY_FIX.md  DOCUMENT_MANAGEMENT_GUIDE.md  FIX_SUMMARY.md  KNOWLEDGE_BASE_FIXES_SUMMARY.md  KNOWLEDGE_BASE_MAPPING_DISPLAY.md  KNOWLEDGE_BASE_SYNC_FIX.md  LICENSE  MEMORY_AGENT_QUICK_START.md  MEMORY_AGENT_WEB_INTEGRATION_GUIDE.md  MEMORY_MANAGEMENT_FEATURES.md  MODEL_CONFIG_UPDATE.md  OLD_COLLECTION_MAPPING_GUIDE.md  PARALLELIZATION_AGENT_FEATURES.md  PROBLEM_SOLVED_SUMMARY.md  PROJECT_CLEANUP_SUMMARY.md  PROJECT_STRUCTURE.md  PROMPT_CHAINING_FEATURES.md  PROMPT_CHAINING_README.md  QUICKSTART.md  QUICKSTART_WEB.md  QUICK_FIX_GUIDE.md  QUICK_START.md  RAG_IMPLEMENTATION_SUMMARY.md  RAG_SELECT_COMPLETE.md  RAG_STORAGE_GUIDE.md  README.md  README_FIX_SUMMARY.md  ROUTING_AGENT_FEATURES.md  SSL_FIX_CHANGELOG.md  SSL_FIX_GUIDE.md  (+51 more)
code_merge_assistant/: .gitignore  INSTALL.md  README.md  README_CN.md  demo.py  merge_assistant.py  requirements.txt  start.bat  start.sh  test_example.py  web_ui.py  使用场景示例.md  开始使用.md  快速开始.md  项目完成说明.md  项目总览.md
docs/: API 参考文档.md  LangGraph 架构详解.md  PROJECT_OVERVIEW.md  RAG (检索增强生成) 使用指南.md  README.md  Reflection Agent 实现总结.md  SSL 连接错误解决方案.md  Web 界面使用指南.md  ai_tools_philosophy.md  api_reference.md  getting_started.md  langgraph_architecture.md  model_configuration.md  prompt_chaining_guide.md  pycharm_setup.md  (+17 more)
(+67 files in other folders)
