[project]
name = "shuyixiao-agent"
version = "0.1.0"
description = "基于 LangGraph 和码云 AI 的智能 Agent 项目"
authors = [
    {name = "ShuYixiao",email = "chinasjh2022@126.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.61",
    "langchain>=0.3.18",
    "langchain-core>=0.3.28",
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
